ajuste de ruta de las imagenes

--- a/src/app/public/navegation/navegation.component.html
+++ b/src/app/public/navegation/navegation.component.html
@@ -1,7 +1,7 @@
 <header class="fixed w-full z-20 top-0 left-0 bg-red-200">
     <nav class="container px-4 lg:max-w-[960px] flex flex-wrap items-center justify-between mx-auto py-2 ">
         <a routerLink="/home" class="hover:scale-110 transition-all duration-150">
-            <img src="../../../assets/otras/logoHorizTransp.png" width="170px" height="70px" alt="Logo" class="w-[135px] h-[70px] rounded-lg">
+            <img src="assets/otras/logoHorizTransp.png" width="170px" height="70px" alt="Logo" class="w-[135px] h-[70px] rounded-lg">
         </a>
   
         <div class="lg:order-2">     
