--- a/src/app/public/personalizar/personalizar.component.html
+++ b/src/app/public/personalizar/personalizar.component.html
@@ -13,7 +13,7 @@
       <div class="relative flex w-80 flex-col rounded-xl bg-green-100 bg-clip-border text-gray-700 shadow-md mt-8">
         <!-- Imagen en vez del fondo azul -->
         <div class="relative mx-4 -mt-6 h-40 overflow-hidden rounded-xl shadow-lg">
-          <img src="../../../assets/patrones/patron1.png" alt="Patrón geométrico"
+          <img src="assets/patrones/patron1.png" alt="Patrón geométrico"
             class="w-full h-full object-cover border-2 border-green-500 rounded-xl" />
         </div>
   
@@ -37,7 +37,7 @@
       <div class="relative flex w-80 flex-col rounded-xl bg-violet-100 bg-clip-border text-gray-700 shadow-md mt-8">
         <!-- Imagen en vez del fondo azul -->
         <div class="relative mx-4 -mt-6 h-40 overflow-hidden rounded-xl shadow-lg">
-          <img src="../../../assets/patrones/patron2.png" alt="Patrón geométrico"
+          <img src="assets/patrones/patron2.png" alt="Patrón geométrico"
             class="w-full h-full object-cover border-2 border-violet-500 rounded-xl" />
         </div>
   
@@ -61,7 +61,7 @@
       <div class="relative flex w-80 flex-col rounded-xl bg-red-100 bg-clip-border text-gray-700 shadow-md mt-8">
         <!-- Imagen en vez del fondo azul -->
         <div class="relative mx-4 -mt-6 h-40 overflow-hidden rounded-xl shadow-lg">
-          <img src="../../../assets/patrones/patron3.png" alt="Patrón geométrico"
+          <img src="assets/patrones/patron3.png" alt="Patrón geométrico"
             class="w-full h-full object-cover border-2 border-red-500 rounded-xl" />
         </div>
   
