Modificaciones de la orden de pedido

--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -75,7 +75,7 @@
 
   </div>
   <section class=" bg-red-400">
-    <p class="font-serif text-white text-center p-2">© 2025. Yulieth Morillo. Todos los derechos reservados</p>
+    <p class="font-serif text-white text-center p-2">© 2025. Julieth Morillo. Todos los derechos reservados</p>
   </section>
 
 </div>
